--- a/css/global.css
+++ b/css/global.css
@@ -1,17 +1,104 @@
 /* Gobal css sheet for whikham.github.io, made by @edazpotato */
-
 :root {
-  --bg-color: #fafafa;
-  --text-color: #212121;
-  --light-text-color: #484848;
-  --dark-text-color: #000000;
+  --bg-color: #ffffff75;
+  --font-color: #121212;
+  --em-font-color: #121212;
+  --border-color: #218095;
+  --gradient-style: radial-gradient(
+    circle,
+    #f6ff1c,
+    #ffdc00,
+    #ffb800,
+    #ff951a
+  );
+  --gradient-size: 8px;
+  --gradient-shadow: #ffb800;
+}
+@media (prefers-color-scheme: light) {
+  .light {
+    display: none;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .dark {
+    display: none;
+  }
+  --bg-color: #121212;
+  --font-color: #ffffff75;
+  --em-font-color: #ffffff87;
+  --border-color: #c9e3e9;
+  --gradient-style: radial-gradient(
+    circle,
+    #ccd325,
+    #d3d84b,
+    #dadd68,
+    #e0e183,
+    #e6e69c
+  );
+  --gradient-size: 2px;
+  --gradient-shadow: #fff;
 }
 
+/* swith to dark mode when dark button checked */
+.dark:checked,
+.dark:checked + * + * {
+  --bg-color: #121212;
+  --font-color: #ffffff75;
+  --em-font-color: #ffffff87;
+  --border-color: #c9e3e9;
+  --gradient-style: radial-gradient(
+    circle,
+    #ccd325,
+    #d3d84b,
+    #dadd68,
+    #e0e183,
+    #e6e69c
+  );
+  --gradient-size: 2px;
+  --gradient-shadow: #fff;
+}
+
+/* swith to light mode when light button checked */
+.light:checked,
+.light:checked + * {
+  --bg-color: #ffffff75;
+  --font-color: #121212;
+  --em-font-color: #121212;
+  --border-color: #218095;
+  --gradient-style: radial-gradient(
+    circle,
+    #f6ff1c,
+    #ffdc00,
+    #ffb800,
+    #ff951a
+  );
+  --gradient-size: 8px;
+  --gradient-shadow: #ffb800;
+}
+
+/* apply css variable */
 body {
-  height: 100%;
+  margin: 0;
+}
+* {
+  background: var(--bg-color);
+  color: var(--font-color);
 }
 
-.light
+input[type="checkbox"].darkmoder {
+  -webkit-appearance: none;
+  outline: 0;
+  position: absolute;
+  z-index: 2;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-image: var(--gradient-style);
+  box-shadow: 0 0 14px var(--gradient-size) var(--gradient-shadow);
+  cursor: pointer;
+}
 
 .link {
   color: #23a2fc;
