--- a/css/global.css
+++ b/css/global.css
@@ -91,9 +91,9 @@ input[type="checkbox"].darkmoder {
   /*position: absolute;*/
   z-index: 2;
   /*top: 10px;
-  right: 10px;
+  right: 10px;*/
   width: 20px;
-  height: 20px;*/
+  height: 20px;
   border-radius: 50%;
   background-image: var(--gradient-style);
   box-shadow: 0 0 14px var(--gradient-size) var(--gradient-shadow);
