--- a/css/global.css
+++ b/css/global.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --bg-color: #ffffff75;
+  --bg-color: #ffffff;
   --font-color: #121212;
   --em-font-color: #121212;
   --border-color: #218095;
