--- a/css/global.css
+++ b/css/global.css
@@ -49,8 +49,8 @@ a {
   /*height: 10vh;*/
 }
 .top + h1 {
-  background-color: var(--font-color);
-  color: var(--bg-color);
+  background-color: var(--font-color) !important;
+  color: var(--bg-color) !important;
 }
 .topimg {
   background-color: var(--font-color);
